fix: spacing issues

--- a/src/App.css
+++ b/src/App.css
@@ -29,7 +29,7 @@ body {
 }
 
 .entry {
-  padding-left: 15px;
-  padding-right: 15px;
+  padding-left: 45px;
+  padding-right: 45px;
   
 }
